@@ -37,8 +37,6 @@ import java.util.LinkedHashSet;
 import java.util.Map;
 import java.util.Optional;
 import java.util.OptionalLong;
-import java.util.Set;
-import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 
@@ -57,9 +55,8 @@ import com.github.benmanes.caffeine.cache.testing.CacheSpec.Population;
 import com.github.benmanes.caffeine.cache.testing.CacheValidationListener;
 import com.github.benmanes.caffeine.cache.testing.CheckNoStats;
 import com.github.benmanes.caffeine.testing.ConcurrentTestHarness;
+import com.github.benmanes.caffeine.testing.Int;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Iterables;
 
 /**
  * The test cases for caches that support the variable expiration policy.
@@ -75,25 +72,25 @@ public final class ExpireAfterVarTest {
   @SuppressWarnings("deprecation")
   @CacheSpec(expiryTime = Expire.FOREVER,
       expiry = { CacheExpiry.CREATE, CacheExpiry.WRITE, CacheExpiry.ACCESS })
-  public void expiry_bounds(Cache<Integer, Integer> cache, CacheContext context) {
+  public void expiry_bounds(Cache<Int, Int> cache, CacheContext context) {
     context.ticker().advance(System.nanoTime());
-    AtomicBoolean running = new AtomicBoolean();
-    AtomicBoolean done = new AtomicBoolean();
-    Integer key = context.absentKey();
+    var running = new AtomicBoolean();
+    var done = new AtomicBoolean();
+    Int key = context.absentKey();
     cache.put(key, key);
 
     try {
       ConcurrentTestHarness.execute(() -> {
         while (!done.get()) {
           context.ticker().advance(1, TimeUnit.MINUTES);
-          cache.get(key, Integer::new);
+          cache.get(key, Int::new);
           running.set(true);
         }
       });
       await().untilTrue(running);
       cache.cleanUp();
 
-      assertThat(cache.get(key, Integer::new), sameInstance(key));
+      assertThat(cache.get(key, Int::new), sameInstance(key));
     } finally {
       done.set(true);
     }
@@ -104,7 +101,7 @@ public final class ExpireAfterVarTest {
   @Test(dataProvider = "caches")
   @CacheSpec(population = Population.FULL,
       expiryTime = Expire.ONE_MINUTE, expiry = CacheExpiry.CREATE)
-  public void put_replace(Cache<Integer, Integer> cache, CacheContext context) {
+  public void put_replace(Cache<Int, Int> cache, CacheContext context) {
     context.ticker().advance(30, TimeUnit.SECONDS);
 
     cache.put(context.firstKey(), context.absentValue());
@@ -124,8 +121,8 @@ public final class ExpireAfterVarTest {
   @Test(dataProvider = "caches")
   @CacheSpec(population = Population.FULL,
       expiryTime = Expire.ONE_MINUTE, expiry = CacheExpiry.CREATE)
-  public void put_replace(AsyncLoadingCache<Integer, Integer> cache, CacheContext context) {
-    CompletableFuture<Integer> future = CompletableFuture.completedFuture(context.absentValue());
+  public void put_replace(AsyncLoadingCache<Int, Int> cache, CacheContext context) {
+    var future = context.absentValue().asFuture();
     context.ticker().advance(30, TimeUnit.SECONDS);
 
     cache.put(context.firstKey(), future);
@@ -145,7 +142,7 @@ public final class ExpireAfterVarTest {
   @Test(dataProvider = "caches")
   @CacheSpec(population = Population.FULL,
       expiryTime = Expire.ONE_MINUTE, expiry = CacheExpiry.CREATE)
-  public void put_replace(Map<Integer, Integer> map, CacheContext context) {
+  public void put_replace(Map<Int, Int> map, CacheContext context) {
     context.ticker().advance(30, TimeUnit.SECONDS);
 
     assertThat(map.put(context.firstKey(), context.absentValue()), is(not(nullValue())));
@@ -165,10 +162,10 @@ public final class ExpireAfterVarTest {
   @Test(dataProvider = "caches")
   @CacheSpec(population = Population.FULL,
       expiryTime = Expire.ONE_MINUTE, expiry = CacheExpiry.CREATE)
-  public void putAll_replace(Cache<Integer, Integer> cache, CacheContext context) {
+  public void putAll_replace(Cache<Int, Int> cache, CacheContext context) {
     context.ticker().advance(30, TimeUnit.SECONDS);
 
-    cache.putAll(ImmutableMap.of(
+    cache.putAll(Map.of(
         context.firstKey(), context.absentValue(),
         context.absentKey(), context.absentValue()));
     context.removalNotifications().clear(); // Ignore replacement notification
@@ -186,7 +183,7 @@ public final class ExpireAfterVarTest {
   @Test(dataProvider = "caches")
   @CacheSpec(population = Population.FULL,
       expiryTime = Expire.ONE_MINUTE, expiry = CacheExpiry.CREATE)
-  public void replace_updated(Map<Integer, Integer> map, CacheContext context) {
+  public void replace_updated(Map<Int, Int> map, CacheContext context) {
     context.ticker().advance(30, TimeUnit.SECONDS);
     assertThat(map.replace(context.firstKey(), context.absentValue()), is(not(nullValue())));
     context.ticker().advance(30, TimeUnit.SECONDS);
@@ -198,8 +195,8 @@ public final class ExpireAfterVarTest {
   @Test(dataProvider = "caches")
   @CacheSpec(population = Population.FULL,
       expiryTime = Expire.ONE_MINUTE, expiry = CacheExpiry.CREATE)
-  public void replaceConditionally_updated(Map<Integer, Integer> map, CacheContext context) {
-    Integer key = context.firstKey();
+  public void replaceConditionally_updated(Map<Int, Int> map, CacheContext context) {
+    Int key = context.firstKey();
     context.ticker().advance(30, TimeUnit.SECONDS);
     assertThat(map.replace(key, context.original().get(key), context.absentValue()), is(true));
     context.ticker().advance(30, TimeUnit.SECONDS);
@@ -213,7 +210,7 @@ public final class ExpireAfterVarTest {
   @CacheSpec(implementation = Implementation.Caffeine,
       population = Population.FULL, expiry = CacheExpiry.MOCKITO)
   @Test(dataProvider = "caches", expectedExceptions = ExpirationException.class)
-  public void getIfPresent_expiryFails(Cache<Integer, Integer> cache, CacheContext context) {
+  public void getIfPresent_expiryFails(Cache<Int, Int> cache, CacheContext context) {
     try {
       context.ticker().advance(1, TimeUnit.HOURS);
       when(context.expiry().expireAfterRead(any(), any(), anyLong(), anyLong()))
@@ -229,7 +226,7 @@ public final class ExpireAfterVarTest {
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
       expiry = CacheExpiry.MOCKITO, removalListener = Listener.REJECTING)
   @Test(dataProvider = "caches", expectedExceptions = ExpirationException.class)
-  public void get_expiryFails_create(Cache<Integer, Integer> cache, CacheContext context) {
+  public void get_expiryFails_create(Cache<Int, Int> cache, CacheContext context) {
     try {
       context.ticker().advance(1, TimeUnit.HOURS);
       when(context.expiry().expireAfterCreate(any(), any(), anyLong()))
@@ -244,7 +241,7 @@ public final class ExpireAfterVarTest {
   @CacheSpec(implementation = Implementation.Caffeine,
       population = Population.FULL, expiry = CacheExpiry.MOCKITO)
   @Test(dataProvider = "caches", expectedExceptions = ExpirationException.class)
-  public void get_expiryFails_read(Cache<Integer, Integer> cache, CacheContext context) {
+  public void get_expiryFails_read(Cache<Int, Int> cache, CacheContext context) {
     try {
       context.ticker().advance(1, TimeUnit.HOURS);
       when(context.expiry().expireAfterRead(any(), any(), anyLong(), anyLong()))
@@ -259,7 +256,7 @@ public final class ExpireAfterVarTest {
   @CacheSpec(implementation = Implementation.Caffeine,
       population = Population.FULL, expiry = CacheExpiry.MOCKITO)
   @Test(dataProvider = "caches", expectedExceptions = ExpirationException.class)
-  public void getAllPresent_expiryFails(Cache<Integer, Integer> cache, CacheContext context) {
+  public void getAllPresent_expiryFails(Cache<Int, Int> cache, CacheContext context) {
     try {
       context.ticker().advance(1, TimeUnit.HOURS);
       when(context.expiry().expireAfterRead(any(), any(), anyLong(), anyLong()))
@@ -274,7 +271,7 @@ public final class ExpireAfterVarTest {
   @CacheSpec(implementation = Implementation.Caffeine,
       population = Population.FULL, expiry = CacheExpiry.MOCKITO)
   @Test(dataProvider = "caches", expectedExceptions = ExpirationException.class)
-  public void put_insert_expiryFails(Cache<Integer, Integer> cache, CacheContext context) {
+  public void put_insert_expiryFails(Cache<Int, Int> cache, CacheContext context) {
     try {
       context.ticker().advance(1, TimeUnit.HOURS);
       when(context.expiry().expireAfterCreate(any(), any(), anyLong()))
@@ -289,9 +286,9 @@ public final class ExpireAfterVarTest {
   @CacheSpec(implementation = Implementation.Caffeine, expiryTime = Expire.ONE_MINUTE,
       population = Population.FULL, expiry = CacheExpiry.MOCKITO)
   @Test(dataProvider = "caches", expectedExceptions = ExpirationException.class)
-  public void put_insert_replaceExpired_expiryFails(Cache<Integer, Integer> cache,
-      CacheContext context, VarExpiration<Integer, Integer> expireVariably) {
-    OptionalLong duration = expireVariably.getExpiresAfter(context.firstKey(), NANOSECONDS);
+  public void put_insert_replaceExpired_expiryFails(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireVariably) {
+    var duration = expireVariably.getExpiresAfter(context.firstKey(), NANOSECONDS);
     try {
       context.ticker().advance(1, TimeUnit.HOURS);
       when(context.expiry().expireAfterCreate(any(), any(), anyLong()))
@@ -307,9 +304,9 @@ public final class ExpireAfterVarTest {
   @CacheSpec(implementation = Implementation.Caffeine,
       population = Population.FULL, expiry = CacheExpiry.MOCKITO)
   @Test(dataProvider = "caches", expectedExceptions = ExpirationException.class)
-  public void put_update_expiryFails(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireVariably) {
-    OptionalLong duration = expireVariably.getExpiresAfter(context.firstKey(), NANOSECONDS);
+  public void put_update_expiryFails(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireVariably) {
+    var duration = expireVariably.getExpiresAfter(context.firstKey(), NANOSECONDS);
     try {
       context.ticker().advance(1, TimeUnit.HOURS);
       when(context.expiry().expireAfterUpdate(any(), any(), anyLong(), anyLong()))
@@ -333,29 +330,29 @@ public final class ExpireAfterVarTest {
   @CacheSpec(implementation = Implementation.Caffeine,
       population = Population.FULL, expiryTime = Expire.ONE_MINUTE,
       expiry = { CacheExpiry.CREATE, CacheExpiry.WRITE, CacheExpiry.ACCESS })
-  public void getIfPresentQuietly(Cache<Integer, Integer> cache, CacheContext context) {
-    Duration original = cache.policy().expireVariably().get()
-        .getExpiresAfter(context.firstKey()).get();
-    Duration advancement = Duration.ofSeconds(30);
+  public void getIfPresentQuietly(Cache<Int, Int> cache, CacheContext context) {
+    var original = cache.policy().expireVariably().orElseThrow()
+        .getExpiresAfter(context.firstKey()).orElseThrow();
+    var advancement = Duration.ofSeconds(30);
     context.ticker().advance(advancement);
     cache.policy().getIfPresentQuietly(context.firstKey());
-    Duration current = cache.policy().expireVariably().get()
-        .getExpiresAfter(context.firstKey()).get();
+    var current = cache.policy().expireVariably().orElseThrow()
+        .getExpiresAfter(context.firstKey()).orElseThrow();
     assertThat(current.plus(advancement), is(original));
   }
 
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine,
       population = Population.EMPTY, expiry = CacheExpiry.DISABLED)
-  public void expireVariably_notEnabled(Cache<Integer, Integer> cache) {
+  public void expireVariably_notEnabled(Cache<Int, Int> cache) {
     assertThat(cache.policy().expireVariably(), is(Optional.empty()));
   }
 
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
       expiry = CacheExpiry.MOCKITO, expiryTime = Expire.ONE_MINUTE)
-  public void getExpiresAfter(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
+  public void getExpiresAfter(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
     assertThat(expireAfterVar.getExpiresAfter(context.absentKey(), TimeUnit.MINUTES),
         is(OptionalLong.empty()));
     assertThat(expireAfterVar.getExpiresAfter(context.firstKey(), TimeUnit.MINUTES),
@@ -374,8 +371,8 @@ public final class ExpireAfterVarTest {
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
       expiry = CacheExpiry.MOCKITO, expiryTime = Expire.ONE_MINUTE)
-  public void getExpiresAfter_duration(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
+  public void getExpiresAfter_duration(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
     assertThat(expireAfterVar.getExpiresAfter(context.absentKey()),
         is(Optional.empty()));
     assertThat(expireAfterVar.getExpiresAfter(context.firstKey()),
@@ -394,8 +391,8 @@ public final class ExpireAfterVarTest {
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
       expiry = CacheExpiry.MOCKITO, expiryTime = Expire.ONE_MINUTE)
-  public void setExpiresAfter(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
+  public void setExpiresAfter(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
     expireAfterVar.setExpiresAfter(context.firstKey(), 2, TimeUnit.MINUTES);
     assertThat(expireAfterVar.getExpiresAfter(context.firstKey(), TimeUnit.MINUTES),
         is(OptionalLong.of(2)));
@@ -412,8 +409,8 @@ public final class ExpireAfterVarTest {
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
       expiry = CacheExpiry.MOCKITO, expiryTime = Expire.ONE_MINUTE)
-  public void setExpiresAfter_duration(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
+  public void setExpiresAfter_duration(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
     expireAfterVar.setExpiresAfter(context.firstKey(), Duration.ofMinutes(2L));
     assertThat(expireAfterVar.getExpiresAfter(context.firstKey()),
         is(Optional.of(Duration.ofMinutes(2L))));
@@ -432,55 +429,55 @@ public final class ExpireAfterVarTest {
   @Test(dataProvider = "caches", expectedExceptions = NullPointerException.class)
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
       expiry = CacheExpiry.WRITE, expiryTime = Expire.ONE_MINUTE)
-  public void putIfAbsent_nullKey(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
-    expireAfterVar.putIfAbsent(null, 2, 3, TimeUnit.SECONDS);
+  public void putIfAbsent_nullKey(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
+    expireAfterVar.putIfAbsent(null, Int.valueOf(2), 3, TimeUnit.SECONDS);
   }
 
   @CheckNoStats
   @Test(dataProvider = "caches", expectedExceptions = NullPointerException.class)
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
       expiry = CacheExpiry.WRITE, expiryTime = Expire.ONE_MINUTE)
-  public void putIfAbsent_nullValue(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
-    expireAfterVar.putIfAbsent(1, null, 3, TimeUnit.SECONDS);
+  public void putIfAbsent_nullValue(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
+    expireAfterVar.putIfAbsent(Int.valueOf(1), null, 3, TimeUnit.SECONDS);
   }
 
   @CheckNoStats
   @Test(dataProvider = "caches", expectedExceptions = NullPointerException.class)
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
       expiry = CacheExpiry.WRITE, expiryTime = Expire.ONE_MINUTE)
-  public void putIfAbsent_nullTimeUnit(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
-    expireAfterVar.putIfAbsent(1, 2, 3, null);
+  public void putIfAbsent_nullTimeUnit(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
+    expireAfterVar.putIfAbsent(Int.valueOf(1), Int.valueOf(2), 3, null);
   }
 
   @CheckNoStats
   @Test(dataProvider = "caches", expectedExceptions = IllegalArgumentException.class)
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
       expiry = CacheExpiry.WRITE, expiryTime = Expire.ONE_MINUTE)
-  public void putIfAbsent_negativeDuration(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
-    expireAfterVar.putIfAbsent(1, 2, -10, TimeUnit.SECONDS);
+  public void putIfAbsent_negativeDuration(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
+    expireAfterVar.putIfAbsent(Int.valueOf(1), Int.valueOf(2), -10, TimeUnit.SECONDS);
   }
 
   @CheckNoStats
   @Test(dataProvider = "caches", expectedExceptions = NullPointerException.class)
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
       expiry = CacheExpiry.WRITE, expiryTime = Expire.ONE_MINUTE)
-  public void putIfAbsent_nullDuration(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
-    expireAfterVar.putIfAbsent(1, 2, null);
+  public void putIfAbsent_nullDuration(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
+    expireAfterVar.putIfAbsent(Int.valueOf(1), Int.valueOf(2), null);
   }
 
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
       expiry = CacheExpiry.WRITE, expiryTime = Expire.ONE_MINUTE)
-  public void putIfAbsent_insert(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
-    Integer key = context.absentKey();
-    Integer value = context.absentValue();
-    Integer result = expireAfterVar.putIfAbsent(key, value, Duration.ofMinutes(2L));
+  public void putIfAbsent_insert(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
+    Int key = context.absentKey();
+    Int value = context.absentValue();
+    Int result = expireAfterVar.putIfAbsent(key, value, Duration.ofMinutes(2L));
     assertThat(result, is(nullValue()));
 
     assertThat(cache.getIfPresent(key), is(value));
@@ -494,11 +491,11 @@ public final class ExpireAfterVarTest {
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
       expiry = CacheExpiry.WRITE, expiryTime = Expire.ONE_MINUTE)
-  public void putIfAbsent_present(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
-    Integer key = context.firstKey();
-    Integer value = context.absentValue();
-    Integer result = expireAfterVar.putIfAbsent(key, value, Duration.ofMinutes(2L));
+  public void putIfAbsent_present(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
+    Int key = context.firstKey();
+    Int value = context.absentValue();
+    Int result = expireAfterVar.putIfAbsent(key, value, Duration.ofMinutes(2L));
     assertThat(result, is(context.original().get(key)));
 
     assertThat(cache.getIfPresent(key), is(context.original().get(key)));
@@ -515,55 +512,55 @@ public final class ExpireAfterVarTest {
   @Test(dataProvider = "caches", expectedExceptions = NullPointerException.class)
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
       expiry = CacheExpiry.WRITE, expiryTime = Expire.ONE_MINUTE)
-  public void put_nullKey(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
-    expireAfterVar.put(null, 2, 3, TimeUnit.SECONDS);
+  public void put_nullKey(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
+    expireAfterVar.put(null, Int.valueOf(2), 3, TimeUnit.SECONDS);
   }
 
   @CheckNoStats
   @Test(dataProvider = "caches", expectedExceptions = NullPointerException.class)
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
       expiry = CacheExpiry.WRITE, expiryTime = Expire.ONE_MINUTE)
-  public void put_nullValue(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
-    expireAfterVar.put(1, null, 3, TimeUnit.SECONDS);
+  public void put_nullValue(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
+    expireAfterVar.put(Int.valueOf(1), null, 3, TimeUnit.SECONDS);
   }
 
   @CheckNoStats
   @Test(dataProvider = "caches", expectedExceptions = NullPointerException.class)
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
       expiry = CacheExpiry.WRITE, expiryTime = Expire.ONE_MINUTE)
-  public void put_nullTimeUnit(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
-    expireAfterVar.put(1, 2, 3, null);
+  public void put_nullTimeUnit(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
+    expireAfterVar.put(Int.valueOf(1), Int.valueOf(2), 3, null);
   }
 
   @CheckNoStats
   @Test(dataProvider = "caches", expectedExceptions = IllegalArgumentException.class)
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
       expiry = CacheExpiry.WRITE, expiryTime = Expire.ONE_MINUTE)
-  public void put_negativeDuration(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
-    expireAfterVar.put(1, 2, -10, TimeUnit.SECONDS);
+  public void put_negativeDuration(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
+    expireAfterVar.put(Int.valueOf(1), Int.valueOf(2), -10, TimeUnit.SECONDS);
   }
 
   @CheckNoStats
   @Test(dataProvider = "caches", expectedExceptions = NullPointerException.class)
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
       expiry = CacheExpiry.WRITE, expiryTime = Expire.ONE_MINUTE)
-  public void put_nullDuration(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
-    expireAfterVar.put(1, 2, null);
+  public void put_nullDuration(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
+    expireAfterVar.put(Int.valueOf(1), Int.valueOf(2), null);
   }
 
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
       expiry = CacheExpiry.WRITE, expiryTime = Expire.ONE_MINUTE)
-  public void put_insert(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
-    Integer key = context.absentKey();
-    Integer value = context.absentValue();
-    Integer oldValue = expireAfterVar.put(key, value, Duration.ofMinutes(2L));
+  public void put_insert(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
+    Int key = context.absentKey();
+    Int value = context.absentValue();
+    Int oldValue = expireAfterVar.put(key, value, Duration.ofMinutes(2L));
     assertThat(oldValue, is(nullValue()));
 
     assertThat(cache.getIfPresent(key), is(value));
@@ -577,11 +574,11 @@ public final class ExpireAfterVarTest {
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
       expiry = CacheExpiry.WRITE, expiryTime = Expire.ONE_MINUTE)
-  public void put_replace(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
-    Integer key = context.firstKey();
-    Integer value = context.absentValue();
-    Integer oldValue = expireAfterVar.put(key, value, Duration.ofMinutes(2L));
+  public void put_replace(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
+    Int key = context.firstKey();
+    Int value = context.absentValue();
+    Int oldValue = expireAfterVar.put(key, value, Duration.ofMinutes(2L));
     assertThat(oldValue, is(context.original().get(key)));
 
     assertThat(cache.getIfPresent(key), is(value));
@@ -596,30 +593,26 @@ public final class ExpireAfterVarTest {
 
   @CacheSpec(implementation = Implementation.Caffeine, expiry = CacheExpiry.ACCESS)
   @Test(dataProvider = "caches", expectedExceptions = UnsupportedOperationException.class)
-  public void oldest_unmodifiable(CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
+  public void oldest_unmodifiable(CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
     expireAfterVar.oldest(Integer.MAX_VALUE).clear();
   }
 
   @CacheSpec(implementation = Implementation.Caffeine, expiry = CacheExpiry.ACCESS)
   @Test(dataProvider = "caches", expectedExceptions = IllegalArgumentException.class)
-  public void oldest_negative(CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
+  public void oldest_negative(CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
     expireAfterVar.oldest(-1);
   }
 
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine, expiry = CacheExpiry.ACCESS)
-  public void oldest_zero(CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
+  public void oldest_zero(CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
     assertThat(expireAfterVar.oldest(0), is(emptyMap()));
   }
 
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine,
       population = Population.FULL, expiry = CacheExpiry.ACCESS)
-  public void oldest_partial(CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
+  public void oldest_partial(CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
     int count = (int) context.initialSize() / 2;
     assertThat(expireAfterVar.oldest(count).size(), is(count));
   }
@@ -628,17 +621,16 @@ public final class ExpireAfterVarTest {
   @CacheSpec(implementation = Implementation.Caffeine,
       population = {Population.PARTIAL, Population.FULL}, expiry = CacheExpiry.ACCESS,
       removalListener = { Listener.DEFAULT, Listener.REJECTING })
-  public void oldest_order(CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
-    Map<Integer, Integer> oldest = expireAfterVar.oldest(Integer.MAX_VALUE);
-    assertThat(oldest.keySet(), contains(context.original().keySet().toArray(new Integer[0])));
+  public void oldest_order(CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
+    var oldest = expireAfterVar.oldest(Integer.MAX_VALUE);
+    assertThat(oldest.keySet(), contains(context.original().keySet().toArray(new Int[0])));
   }
 
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine, expiry = CacheExpiry.ACCESS)
-  public void oldest_snapshot(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
-    Map<Integer, Integer> oldest = expireAfterVar.oldest(Integer.MAX_VALUE);
+  public void oldest_snapshot(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
+    var oldest = expireAfterVar.oldest(Integer.MAX_VALUE);
     cache.invalidateAll();
     assertThat(oldest, is(equalTo(context.original())));
   }
@@ -647,30 +639,26 @@ public final class ExpireAfterVarTest {
 
   @CacheSpec(implementation = Implementation.Caffeine, expiry = CacheExpiry.ACCESS)
   @Test(dataProvider = "caches", expectedExceptions = UnsupportedOperationException.class)
-  public void youngest_unmodifiable(CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
+  public void youngest_unmodifiable(CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
     expireAfterVar.youngest(Integer.MAX_VALUE).clear();;
   }
 
   @CacheSpec(implementation = Implementation.Caffeine, expiry = CacheExpiry.ACCESS)
   @Test(dataProvider = "caches", expectedExceptions = IllegalArgumentException.class)
-  public void youngest_negative(CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
+  public void youngest_negative(CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
     expireAfterVar.youngest(-1);
   }
 
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine, expiry = CacheExpiry.ACCESS)
-  public void youngest_zero(CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
+  public void youngest_zero(CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
     assertThat(expireAfterVar.youngest(0), is(emptyMap()));
   }
 
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine,
       population = Population.FULL, expiry = CacheExpiry.ACCESS)
-  public void youngest_partial(CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
+  public void youngest_partial(CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
     int count = (int) context.initialSize() / 2;
     assertThat(expireAfterVar.youngest(count).size(), is(count));
   }
@@ -679,18 +667,17 @@ public final class ExpireAfterVarTest {
   @CacheSpec(implementation = Implementation.Caffeine,
       population = {Population.PARTIAL, Population.FULL}, expiry = CacheExpiry.ACCESS,
       removalListener = { Listener.DEFAULT, Listener.REJECTING })
-  public void youngest_order(CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
-    Map<Integer, Integer> youngest = expireAfterVar.youngest(Integer.MAX_VALUE);
-    Set<Integer> keys = new LinkedHashSet<>(ImmutableList.copyOf(youngest.keySet()).reverse());
-    assertThat(keys, contains(Iterables.toArray(keys, Integer.class)));
+  public void youngest_order(CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
+    var youngest = expireAfterVar.youngest(Integer.MAX_VALUE);
+    var keys = new LinkedHashSet<>(ImmutableList.copyOf(youngest.keySet()).reverse());
+    assertThat(keys, contains(keys.toArray(Int[]::new)));
   }
 
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine, expiry = CacheExpiry.ACCESS)
-  public void youngest_snapshot(Cache<Integer, Integer> cache, CacheContext context,
-      VarExpiration<Integer, Integer> expireAfterVar) {
-    Map<Integer, Integer> youngest = expireAfterVar.youngest(Integer.MAX_VALUE);
+  public void youngest_snapshot(Cache<Int, Int> cache,
+      CacheContext context, VarExpiration<Int, Int> expireAfterVar) {
+    var youngest = expireAfterVar.youngest(Integer.MAX_VALUE);
     cache.invalidateAll();
     assertThat(youngest, is(equalTo(context.original())));
   }
