@@ -28,9 +28,9 @@ import static org.hamcrest.Matchers.nullValue;
 
 import java.time.Duration;
 import java.util.LinkedHashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
 
@@ -47,12 +47,11 @@ import com.github.benmanes.caffeine.cache.testing.CacheSpec.Implementation;
 import com.github.benmanes.caffeine.cache.testing.CacheSpec.Listener;
 import com.github.benmanes.caffeine.cache.testing.CacheSpec.Loader;
 import com.github.benmanes.caffeine.cache.testing.CacheSpec.Population;
+import com.github.benmanes.caffeine.testing.Int;
 import com.github.benmanes.caffeine.cache.testing.CacheValidationListener;
 import com.github.benmanes.caffeine.cache.testing.CheckNoStats;
 import com.github.benmanes.caffeine.cache.testing.ExpireAfterWrite;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Iterables;
 
 /**
  * The test cases for caches that support the expire after write (time-to-live) policy.
@@ -71,7 +70,7 @@ public final class ExpireAfterWriteTest {
       expireAfterWrite = { Expire.DISABLED, Expire.ONE_MINUTE },
       expiry = { CacheExpiry.DISABLED, CacheExpiry.WRITE }, expiryTime = Expire.ONE_MINUTE,
       population = { Population.PARTIAL, Population.FULL })
-  public void getIfPresent(Cache<Integer, Integer> cache, CacheContext context) {
+  public void getIfPresent(Cache<Int, Int> cache, CacheContext context) {
     context.ticker().advance(30, TimeUnit.SECONDS);
     cache.getIfPresent(context.firstKey());
     context.ticker().advance(45, TimeUnit.SECONDS);
@@ -88,8 +87,8 @@ public final class ExpireAfterWriteTest {
   @CacheSpec(population = { Population.PARTIAL, Population.FULL },
       mustExpireWithAnyOf = { AFTER_WRITE, VARIABLE }, expireAfterWrite = Expire.ONE_MINUTE,
       expiry = { CacheExpiry.DISABLED, CacheExpiry.WRITE }, expiryTime = Expire.ONE_MINUTE)
-  public void get(Cache<Integer, Integer> cache, CacheContext context) {
-    Function<Integer, Integer> mappingFunction = context.original()::get;
+  public void get(Cache<Int, Int> cache, CacheContext context) {
+    Function<Int, Int> mappingFunction = context.original()::get;
     context.ticker().advance(30, TimeUnit.SECONDS);
     cache.get(context.firstKey(), mappingFunction);
     context.ticker().advance(45, TimeUnit.SECONDS);
@@ -106,7 +105,7 @@ public final class ExpireAfterWriteTest {
   @CacheSpec(population = { Population.PARTIAL, Population.FULL },
       mustExpireWithAnyOf = { AFTER_WRITE, VARIABLE }, expireAfterWrite = Expire.ONE_MINUTE,
       expiry = { CacheExpiry.DISABLED, CacheExpiry.WRITE }, expiryTime = Expire.ONE_MINUTE)
-  public void getAllPresent(Cache<Integer, Integer> cache, CacheContext context) {
+  public void getAllPresent(Cache<Int, Int> cache, CacheContext context) {
     context.ticker().advance(30, TimeUnit.SECONDS);
     cache.getAllPresent(context.firstMiddleLastKeys());
     context.ticker().advance(45, TimeUnit.SECONDS);
@@ -125,14 +124,14 @@ public final class ExpireAfterWriteTest {
   @CacheSpec(population = { Population.PARTIAL, Population.FULL },
       mustExpireWithAnyOf = { AFTER_WRITE, VARIABLE }, expireAfterWrite = Expire.ONE_MINUTE,
       expiry = { CacheExpiry.DISABLED, CacheExpiry.WRITE }, expiryTime = Expire.ONE_MINUTE)
-  public void get(LoadingCache<Integer, Integer> cache, CacheContext context) {
+  public void get(LoadingCache<Int, Int> cache, CacheContext context) {
     context.ticker().advance(30, TimeUnit.SECONDS);
     cache.get(context.firstKey());
     cache.get(context.absentKey());
     context.ticker().advance(45, TimeUnit.SECONDS);
     cache.cleanUp();
     assertThat(cache.estimatedSize(), is(1L));
-    assertThat(cache.getIfPresent(context.absentKey()), is(-context.absentKey()));
+    assertThat(cache.getIfPresent(context.absentKey()), is(context.absentKey().negate()));
 
     long count = context.initialSize();
     verifyListeners(context, verifier -> verifier.hasOnly(count, RemovalCause.EXPIRED));
@@ -143,16 +142,16 @@ public final class ExpireAfterWriteTest {
       mustExpireWithAnyOf = { AFTER_WRITE, VARIABLE }, expireAfterWrite = Expire.ONE_MINUTE,
       expiry = { CacheExpiry.DISABLED, CacheExpiry.WRITE }, expiryTime = Expire.ONE_MINUTE,
       loader = {Loader.IDENTITY, Loader.BULK_IDENTITY})
-  public void getAll(LoadingCache<Integer, Integer> cache, CacheContext context) {
+  public void getAll(LoadingCache<Int, Int> cache, CacheContext context) {
     context.ticker().advance(30, TimeUnit.SECONDS);
-    assertThat(cache.getAll(ImmutableList.of(context.firstKey(), context.absentKey())),
-        is(ImmutableMap.of(context.firstKey(), -context.firstKey(),
+    assertThat(cache.getAll(List.of(context.firstKey(), context.absentKey())),
+        is(Map.of(context.firstKey(), context.firstKey().negate(),
             context.absentKey(), context.absentKey())));
 
     context.ticker().advance(45, TimeUnit.SECONDS);
     cache.cleanUp();
-    assertThat(cache.getAll(ImmutableList.of(context.firstKey(), context.absentKey())),
-        is(ImmutableMap.of(context.firstKey(), context.firstKey(),
+    assertThat(cache.getAll(List.of(context.firstKey(), context.absentKey())),
+        is(Map.of(context.firstKey(), context.firstKey(),
             context.absentKey(), context.absentKey())));
     assertThat(cache.estimatedSize(), is(2L));
 
@@ -167,7 +166,7 @@ public final class ExpireAfterWriteTest {
       mustExpireWithAnyOf = { AFTER_WRITE, VARIABLE }, expireAfterWrite = Expire.ONE_MINUTE,
       expiry = { CacheExpiry.DISABLED, CacheExpiry.WRITE }, expiryTime = Expire.ONE_MINUTE)
   @SuppressWarnings("FutureReturnValueIgnored")
-  public void getIfPresent(AsyncLoadingCache<Integer, Integer> cache, CacheContext context) {
+  public void getIfPresent(AsyncLoadingCache<Int, Int> cache, CacheContext context) {
     context.ticker().advance(30, TimeUnit.SECONDS);
     cache.getIfPresent(context.firstKey());
     context.ticker().advance(45, TimeUnit.SECONDS);
@@ -185,7 +184,7 @@ public final class ExpireAfterWriteTest {
   @CacheSpec(population = Population.FULL,
       mustExpireWithAnyOf = { AFTER_WRITE, VARIABLE }, expireAfterWrite = Expire.ONE_MINUTE,
       expiry = { CacheExpiry.DISABLED, CacheExpiry.WRITE }, expiryTime = Expire.ONE_MINUTE)
-  public void putIfAbsent(Map<Integer, Integer> map, CacheContext context) {
+  public void putIfAbsent(Map<Int, Int> map, CacheContext context) {
     context.ticker().advance(30, TimeUnit.SECONDS);
     assertThat(map.putIfAbsent(context.firstKey(), context.absentValue()), is(not(nullValue())));
 
@@ -203,12 +202,12 @@ public final class ExpireAfterWriteTest {
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine,
       population = Population.FULL, expireAfterWrite = Expire.ONE_MINUTE)
-  public void getIfPresentQuietly(Cache<Integer, Integer> cache, CacheContext context) {
-    Duration original = cache.policy().expireAfterWrite().get().ageOf(context.firstKey()).get();
-    Duration advancement = Duration.ofSeconds(30);
+  public void getIfPresentQuietly(Cache<Int, Int> cache, CacheContext context) {
+    var original = cache.policy().expireAfterWrite().get().ageOf(context.firstKey()).get();
+    var advancement = Duration.ofSeconds(30);
     context.ticker().advance(advancement);
     cache.policy().getIfPresentQuietly(context.firstKey());
-    Duration current = cache.policy().expireAfterWrite().get().ageOf(context.firstKey()).get();
+    var current = cache.policy().expireAfterWrite().get().ageOf(context.firstKey()).get();
     assertThat(current.minus(advancement), is(original));
   }
 
@@ -216,7 +215,7 @@ public final class ExpireAfterWriteTest {
   @CacheSpec(implementation = Implementation.Caffeine,
       mustExpireWithAnyOf = AFTER_WRITE, expireAfterWrite = Expire.ONE_MINUTE)
   public void getExpiresAfter(CacheContext context,
-      @ExpireAfterWrite FixedExpiration<Integer, Integer> expireAfterWrite) {
+      @ExpireAfterWrite FixedExpiration<Int, Int> expireAfterWrite) {
     assertThat(expireAfterWrite.getExpiresAfter(TimeUnit.MINUTES), is(1L));
   }
 
@@ -224,15 +223,15 @@ public final class ExpireAfterWriteTest {
   @CacheSpec(implementation = Implementation.Caffeine,
       mustExpireWithAnyOf = AFTER_WRITE, expireAfterWrite = Expire.ONE_MINUTE)
   public void getExpiresAfter_duration(CacheContext context,
-      @ExpireAfterWrite FixedExpiration<Integer, Integer> expireAfterWrite) {
+      @ExpireAfterWrite FixedExpiration<Int, Int> expireAfterWrite) {
     assertThat(expireAfterWrite.getExpiresAfter(), is(Duration.ofMinutes(1L)));
   }
 
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine,
       mustExpireWithAnyOf = AFTER_WRITE, expireAfterWrite = Expire.ONE_MINUTE)
-  public void setExpiresAfter(Cache<Integer, Integer> cache, CacheContext context,
-      @ExpireAfterWrite FixedExpiration<Integer, Integer> expireAfterWrite) {
+  public void setExpiresAfter(Cache<Int, Int> cache, CacheContext context,
+      @ExpireAfterWrite FixedExpiration<Int, Int> expireAfterWrite) {
     expireAfterWrite.setExpiresAfter(2, TimeUnit.MINUTES);
     assertThat(expireAfterWrite.getExpiresAfter(TimeUnit.MINUTES), is(2L));
 
@@ -244,8 +243,8 @@ public final class ExpireAfterWriteTest {
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine,
       mustExpireWithAnyOf = AFTER_WRITE, expireAfterWrite = Expire.ONE_MINUTE)
-  public void setExpiresAfter_duration(Cache<Integer, Integer> cache, CacheContext context,
-      @ExpireAfterWrite FixedExpiration<Integer, Integer> expireAfterWrite) {
+  public void setExpiresAfter_duration(Cache<Int, Int> cache, CacheContext context,
+      @ExpireAfterWrite FixedExpiration<Int, Int> expireAfterWrite) {
     expireAfterWrite.setExpiresAfter(Duration.ofMinutes(2));
     assertThat(expireAfterWrite.getExpiresAfter(), is(Duration.ofMinutes(2L)));
 
@@ -258,7 +257,7 @@ public final class ExpireAfterWriteTest {
   @CacheSpec(implementation = Implementation.Caffeine, expireAfterWrite = Expire.ONE_MINUTE,
       population = { Population.SINGLETON, Population.PARTIAL, Population.FULL })
   public void ageOf(CacheContext context,
-      @ExpireAfterWrite FixedExpiration<Integer, Integer> expireAfterWrite) {
+      @ExpireAfterWrite FixedExpiration<Int, Int> expireAfterWrite) {
     assertThat(expireAfterWrite.ageOf(context.firstKey(), TimeUnit.SECONDS).getAsLong(), is(0L));
     context.ticker().advance(30, TimeUnit.SECONDS);
     assertThat(expireAfterWrite.ageOf(context.firstKey(), TimeUnit.SECONDS).getAsLong(), is(30L));
@@ -270,7 +269,7 @@ public final class ExpireAfterWriteTest {
   @CacheSpec(implementation = Implementation.Caffeine, expireAfterWrite = Expire.ONE_MINUTE,
       population = { Population.SINGLETON, Population.PARTIAL, Population.FULL })
   public void ageOf_duration(CacheContext context,
-      @ExpireAfterWrite FixedExpiration<Integer, Integer> expireAfterWrite) {
+      @ExpireAfterWrite FixedExpiration<Int, Int> expireAfterWrite) {
     assertThat(expireAfterWrite.ageOf(context.firstKey()), is(Optional.of(Duration.ZERO)));
     context.ticker().advance(30, TimeUnit.SECONDS);
     assertThat(expireAfterWrite.ageOf(context.firstKey()),
@@ -284,21 +283,21 @@ public final class ExpireAfterWriteTest {
   @CacheSpec(implementation = Implementation.Caffeine, expireAfterWrite = Expire.ONE_MINUTE)
   @Test(dataProvider = "caches", expectedExceptions = UnsupportedOperationException.class)
   public void oldest_unmodifiable(CacheContext context,
-      @ExpireAfterWrite FixedExpiration<Integer, Integer> expireAfterWrite) {
+      @ExpireAfterWrite FixedExpiration<Int, Int> expireAfterWrite) {
     expireAfterWrite.oldest(Integer.MAX_VALUE).clear();
   }
 
   @CacheSpec(implementation = Implementation.Caffeine, expireAfterWrite = Expire.ONE_MINUTE)
   @Test(dataProvider = "caches", expectedExceptions = IllegalArgumentException.class)
   public void oldest_negative(CacheContext context,
-      @ExpireAfterWrite FixedExpiration<Integer, Integer> expireAfterWrite) {
+      @ExpireAfterWrite FixedExpiration<Int, Int> expireAfterWrite) {
     expireAfterWrite.oldest(-1);
   }
 
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine, expireAfterWrite = Expire.ONE_MINUTE)
   public void oldest_zero(CacheContext context,
-      @ExpireAfterWrite FixedExpiration<Integer, Integer> expireAfterWrite) {
+      @ExpireAfterWrite FixedExpiration<Int, Int> expireAfterWrite) {
     assertThat(expireAfterWrite.oldest(0), is(emptyMap()));
   }
 
@@ -306,8 +305,8 @@ public final class ExpireAfterWriteTest {
   @CacheSpec(implementation = Implementation.Caffeine,
       population = Population.FULL, expireAfterWrite = Expire.ONE_MINUTE)
   public void oldest_partial(CacheContext context,
-      @ExpireAfterWrite FixedExpiration<Integer, Integer> expireAfterWrite) {
-    int count = (int) context.initialSize() / 2;
+      @ExpireAfterWrite FixedExpiration<Int, Int> expireAfterWrite) {
+    int count = (int) (context.initialSize() / 2);
     assertThat(expireAfterWrite.oldest(count).size(), is(count));
   }
 
@@ -316,16 +315,16 @@ public final class ExpireAfterWriteTest {
       population = {Population.PARTIAL, Population.FULL}, expireAfterWrite = Expire.ONE_MINUTE,
       removalListener = { Listener.DEFAULT, Listener.REJECTING })
   public void oldest_order(CacheContext context,
-      @ExpireAfterWrite FixedExpiration<Integer, Integer> expireAfterWrite) {
-    Map<Integer, Integer> oldest = expireAfterWrite.oldest(Integer.MAX_VALUE);
-    assertThat(oldest.keySet(), contains(context.original().keySet().toArray(new Integer[0])));
+      @ExpireAfterWrite FixedExpiration<Int, Int> expireAfterWrite) {
+    Map<Int, Int> oldest = expireAfterWrite.oldest(Integer.MAX_VALUE);
+    assertThat(oldest.keySet(), contains(context.original().keySet().toArray(new Int[0])));
   }
 
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine, expireAfterWrite = Expire.ONE_MINUTE)
-  public void oldest_snapshot(Cache<Integer, Integer> cache, CacheContext context,
-      @ExpireAfterWrite FixedExpiration<Integer, Integer> expireAfterWrite) {
-    Map<Integer, Integer> oldest = expireAfterWrite.oldest(Integer.MAX_VALUE);
+  public void oldest_snapshot(Cache<Int, Int> cache, CacheContext context,
+      @ExpireAfterWrite FixedExpiration<Int, Int> expireAfterWrite) {
+    var oldest = expireAfterWrite.oldest(Integer.MAX_VALUE);
     cache.invalidateAll();
     assertThat(oldest, is(equalTo(context.original())));
   }
@@ -335,21 +334,21 @@ public final class ExpireAfterWriteTest {
   @CacheSpec(implementation = Implementation.Caffeine, expireAfterWrite = Expire.ONE_MINUTE)
   @Test(dataProvider = "caches", expectedExceptions = UnsupportedOperationException.class)
   public void youngest_unmodifiable(CacheContext context,
-      @ExpireAfterWrite FixedExpiration<Integer, Integer> expireAfterWrite) {
+      @ExpireAfterWrite FixedExpiration<Int, Int> expireAfterWrite) {
     expireAfterWrite.youngest(Integer.MAX_VALUE).clear();;
   }
 
   @CacheSpec(implementation = Implementation.Caffeine, expireAfterWrite = Expire.ONE_MINUTE)
   @Test(dataProvider = "caches", expectedExceptions = IllegalArgumentException.class)
   public void youngest_negative(CacheContext context,
-      @ExpireAfterWrite FixedExpiration<Integer, Integer> expireAfterWrite) {
+      @ExpireAfterWrite FixedExpiration<Int, Int> expireAfterWrite) {
     expireAfterWrite.youngest(-1);
   }
 
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine, expireAfterWrite = Expire.ONE_MINUTE)
   public void youngest_zero(CacheContext context,
-      @ExpireAfterWrite FixedExpiration<Integer, Integer> expireAfterWrite) {
+      @ExpireAfterWrite FixedExpiration<Int, Int> expireAfterWrite) {
     assertThat(expireAfterWrite.youngest(0), is(emptyMap()));
   }
 
@@ -357,8 +356,8 @@ public final class ExpireAfterWriteTest {
   @CacheSpec(implementation = Implementation.Caffeine,
       population = Population.FULL, expireAfterWrite = Expire.ONE_MINUTE)
   public void youngest_partial(CacheContext context,
-      @ExpireAfterWrite FixedExpiration<Integer, Integer> expireAfterWrite) {
-    int count = (int) context.initialSize() / 2;
+      @ExpireAfterWrite FixedExpiration<Int, Int> expireAfterWrite) {
+    int count = (int) (context.initialSize() / 2);
     assertThat(expireAfterWrite.youngest(count).size(), is(count));
   }
 
@@ -367,17 +366,17 @@ public final class ExpireAfterWriteTest {
       population = {Population.PARTIAL, Population.FULL}, expireAfterWrite = Expire.ONE_MINUTE,
       removalListener = { Listener.DEFAULT, Listener.REJECTING })
   public void youngest_order(CacheContext context,
-      @ExpireAfterWrite FixedExpiration<Integer, Integer> expireAfterWrite) {
-    Map<Integer, Integer> youngest = expireAfterWrite.youngest(Integer.MAX_VALUE);
-    Set<Integer> keys = new LinkedHashSet<>(ImmutableList.copyOf(youngest.keySet()).reverse());
-    assertThat(keys, contains(Iterables.toArray(keys, Integer.class)));
+      @ExpireAfterWrite FixedExpiration<Int, Int> expireAfterWrite) {
+    var youngest = expireAfterWrite.youngest(Integer.MAX_VALUE);
+    var keys = new LinkedHashSet<>(ImmutableList.copyOf(youngest.keySet()).reverse());
+    assertThat(keys, contains(keys.toArray(Int[]::new)));
   }
 
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine, expireAfterWrite = Expire.ONE_MINUTE)
-  public void youngest_snapshot(Cache<Integer, Integer> cache, CacheContext context,
-      @ExpireAfterWrite FixedExpiration<Integer, Integer> expireAfterWrite) {
-    Map<Integer, Integer> youngest = expireAfterWrite.youngest(Integer.MAX_VALUE);
+  public void youngest_snapshot(Cache<Int, Int> cache, CacheContext context,
+      @ExpireAfterWrite FixedExpiration<Int, Int> expireAfterWrite) {
+    var youngest = expireAfterWrite.youngest(Integer.MAX_VALUE);
     cache.invalidateAll();
     assertThat(youngest, is(equalTo(context.original())));
   }
